# gen/http/openapi3.yaml
@@ -19,8 +19,8 @@ paths:
                         application/json:
                             schema:
                                 type: string
-                                example: Odit nesciunt dicta tempore fugiat.
-                            example: Dolorum aut aut impedit nisi odio.
+                                example: Aut id placeat voluptate expedita sunt culpa.
+                            example: Ut in sapiente illo explicabo aut.
             security:
                 - login_header_Authorization: []
     /signup:
@@ -29,6 +29,47 @@ paths:
                 - signup
             summary: Signup signup
             operationId: signup#Signup
+            parameters:
+                - name: firstName
+                  in: query
+                  description: User first name
+                  allowEmptyValue: true
+                  required: true
+                  schema:
+                    type: string
+                    description: User first name
+                    example: Autem quia veritatis dolorem.
+                  example: Minima nisi.
+                - name: lastName
+                  in: query
+                  description: User last name
+                  allowEmptyValue: true
+                  required: true
+                  schema:
+                    type: string
+                    description: User last name
+                    example: Ut ut omnis.
+                  example: Ut molestiae nihil ipsam voluptatem explicabo qui.
+                - name: email
+                  in: query
+                  description: User email
+                  allowEmptyValue: true
+                  required: true
+                  schema:
+                    type: string
+                    description: User email
+                    example: Quae autem quia nemo iste similique veritatis.
+                  example: At ad.
+                - name: phone
+                  in: query
+                  description: User phone number
+                  allowEmptyValue: true
+                  required: true
+                  schema:
+                    type: string
+                    description: User phone number
+                    example: Aut et atque.
+                  example: Aut animi et deserunt est.
             responses:
                 "200":
                     description: OK response.
@@ -36,8 +77,8 @@ paths:
                         application/json:
                             schema:
                                 type: string
-                                example: Velit rerum occaecati quia.
-                            example: Commodi officiis numquam molestiae.
+                                example: Voluptatibus cupiditate ea cum ut beatae.
+                            example: Doloremque ut vel.
             security:
                 - signup_header_Authorization: []
     /upload/{content}:
@@ -55,89 +96,80 @@ paths:
                     type: string
                     description: photo content
                     example:
-                        - 78
-                        - 97
-                        - 109
-                        - 32
-                        - 100
-                        - 111
-                        - 108
-                        - 111
-                        - 114
-                        - 105
+                        - 65
                         - 98
-                        - 117
-                        - 115
                         - 32
-                        - 100
-                        - 111
-                        - 108
-                        - 111
-                        - 114
-                        - 32
-                        - 99
-                        - 111
-                        - 109
-                        - 109
-                        - 111
-                        - 100
-                        - 105
-                        - 32
-                        - 99
-                        - 111
-                        - 110
-                        - 115
                         - 101
+                        - 110
+                        - 105
+                        - 109
+                        - 32
+                        - 97
+                        - 117
+                        - 116
+                        - 32
+                        - 101
+                        - 116
+                        - 32
                         - 113
                         - 117
-                        - 117
-                        - 110
-                        - 116
-                        - 117
-                        - 114
-                        - 32
-                        - 112
-                        - 101
-                        - 114
-                        - 102
-                        - 101
-                        - 114
-                        - 101
-                        - 110
-                        - 100
-                        - 105
+                        - 97
                         - 115
                         - 32
-                        - 101
-                        - 97
+                        - 113
+                        - 117
+                        - 111
                         - 46
                     format: binary
                   example:
-                    - 81
+                    - 79
+                    - 102
+                    - 102
+                    - 105
+                    - 99
+                    - 105
+                    - 105
+                    - 115
+                    - 32
+                    - 101
+                    - 115
+                    - 116
+                    - 32
+                    - 111
+                    - 112
+                    - 116
+                    - 105
+                    - 111
+                    - 32
+                    - 118
+                    - 111
+                    - 108
+                    - 117
+                    - 112
+                    - 116
+                    - 97
+                    - 116
+                    - 101
+                    - 115
+                    - 32
+                    - 113
                     - 117
                     - 105
                     - 32
+                    - 114
+                    - 101
+                    - 99
                     - 117
+                    - 115
+                    - 97
                     - 110
                     - 100
-                    - 101
-                    - 32
-                    - 101
-                    - 116
-                    - 32
-                    - 109
-                    - 111
-                    - 108
-                    - 108
-                    - 105
-                    - 116
-                    - 105
                     - 97
+                    - 101
                     - 32
-                    - 109
-                    - 111
-                    - 100
+                    - 115
                     - 105
+                    - 116
                     - 46
             responses:
                 "200":
@@ -146,14 +178,14 @@ paths:
                         Access-Control-Allow-Origin:
                             schema:
                                 type: string
-                                example: Earum quia aut.
-                            example: Voluptatibus cupiditate ea cum ut beatae.
+                                example: Dolorem eligendi aut consequatur minima rem tempora.
+                            example: Dignissimos sed eius odio commodi eos consequatur.
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Voluptate quod.
-                            example: Magnam non voluptas aut vero pariatur.
+                                example: Magnam non voluptas aut vero pariatur.
+                            example: Quod aut alias optio quidem ducimus.
             security:
                 - jwt_header_Authorization: []
 components:
